src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__date__cast_date_to_string__impl.snap
---
source: src/expr/src/scalar/func/impls/date.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: String,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: String,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastStringToDate(
            CastStringToDate,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
